# scribe

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
migrations/: 20250101000000_initial.sql  20250201000000_metadata.sql  20250301000000_add_cwd_index.sql  20250401000000_classifications_rules_enforcements.sql  20260301000000_event_detail_tables.sql  20260401000000_sync_metadata.sql  20260501000000_account_support.sql
src/: classify.rs  cmd_account.rs  cmd_backfill.rs  cmd_classify.rs  cmd_completions.rs  cmd_guard.rs  cmd_init.rs  cmd_log.rs  cmd_policy.rs  cmd_query.rs  cmd_retain.rs  cmd_stats.rs  cmd_sync.rs  cmd_usage.rs  config.rs  db.rs  format.rs  main.rs  models.rs
src/sync/: bundle.rs  crypto.rs  merge.rs  mod.rs  transport.rs
src/tui/: app.rs  event.rs  filter.rs  help.rs  mod.rs  ui.rs
src/tui/tabs/: events.rs  live.rs  mod.rs  policy.rs  sessions.rs  stats.rs
tests/: completions_integration.rs  concurrent_integration.rs  config_integration.rs  init_integration.rs  log_integration.rs  query_integration.rs  retain_integration.rs  stats_integration.rs
