[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
csv = "1"
dirs = "6"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
sqlx-sqlite = { version = "0.8", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3"
