[package]
name = "scribe"
version = "1.0.0-beta4"
edition = "2021"

[features]
guard = ["regex"]
sync = ["age", "hostname", "zstd"]
usage = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
crossterm = { version = "0.28", features = ["event-stream"] }
csv = "1"
dirs = "6"
futures = "0.3"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
sqlx-sqlite = { version = "0.8", features = ["bundled"] }
ratatui = "0.29"
regex = { version = "1", optional = true }
age = { version = "0.11", optional = true }
hostname = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3"
